# SyntheticPersonas

./: README.md  pyproject.toml
docs/: gepa_dspy_audit.md
examples/: databricks_demo.py  dspy_gepa_smoke.py
src/persona_gepa/: __init__.py  artifacts.py  cache.py  config.py  data.py  infer.py  judge.py  metric.py  optimize.py  program.py  utils.py
tests/: test_data.py  test_judge.py  test_metric.py  test_optimize.py  test_program.py
